--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
   "homepage": "http://foundation.zurb.com",
   "dependencies": {
     "foundation-sites": "~6.3.0",
-    "motion-ui": "~1.2.2"
+    "motion-ui": "~1.2.2",
+    "foundation-select": "^1.2.0"
   },
   "ignore": [
     "**/.*",
