--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "foundation-sites": "^6.3.0",
     "motion-ui": "~1.2.2",
     "foundation-select": "^1.2.0",
-    "spin.js": "2"
+    "spin.js": "2",
+    "sass-triangle": "sass-triangle#*"
   },
   "ignore": [
     "**/.*",
