--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "foundation-sites": "^6.3.0",
     "motion-ui": "~1.2.2",
-    "foundation-select": "^1.2.0",
+    "foundation-select": "master",
     "spin.js": "2",
     "sass-triangle": "sass-triangle#*"
   },
